multiple changes... fixed bug where pie was all over the place fixed bug where go button would not go on ios devices changed ui and font in several places added reference links to bible verses

--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,8 @@ html, body{
 }
 
 *, input{
-    font-family: georgia;
+    /* font-family: georgia; */
+    font-family: helvetica;
 }
 
 input[type=textbox]{
@@ -14,12 +15,15 @@ input[type=textbox]{
     padding-bottom: 0.3em;
     padding-top: 0.2em;
     font-size: 150%;
-    margin:0.5em;;
-    margin-bottom: 0em;
+    margin: 0;
+    /* margin:0.5em;; */
+    /* margin-bottom: 0em; */
     border:1px solid #aaa;
     border-radius: 0.2em;
+    box-shadow: none;
+    -webkit-appearance: none;
     outline: none;
-    width: 10.7em;
+    width: 11em;
 }
 
 .grey{
@@ -66,8 +70,19 @@ input[type=textbox]{
 }
 
 .verse-word{
-    font-size: 170%;
-    margin-bottom: 0.5em;
+    /* font-size: 170%; */
+    /* margin-bottom: 0.5em; */
+    /* background-color: #f5f5f5; */
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    border-bottom: 0.1em solid #ccc;
+}
+
+.verse-texts{
+    padding-top:0.3em;
+    border-top: 0.2em solid #eee;
+    border-bottom: 0.1em solid #ccc;
+    display: none;
 }
 
 .verse-text{
@@ -140,10 +155,16 @@ input[type=textbox]{
 
 .search-form{
     text-align: center;
+    background-color: #eee;
+    border-bottom: 0.1em solid #ddd;
+    padding:0.5em;
 }
 
 .sort-control{
-    margin-bottom: 1em;
+    /* margin-bottom: 0.5em; */
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    padding-bottom: 0.5em;
 }
 
 .subhead{
@@ -158,12 +179,30 @@ input[type=textbox]{
     margin-left: 0.2em;
 }
 
-.usage-sort > div{
-    padding-right: 1.5em;
+.usage-sort > .usage-sorter{
+    color: #777;
+    border: 0.1em solid #999;
+    border-left: none;
+    padding: 0.3em;
+    padding-bottom: 0.4em;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.usage-sorter.first{
+    border-radius: 0.2em 0em 0em 0.2em;
+    border-left: 0.1em solid #999;
+}
+
+.usage-sorter.last{
+    border-radius: 0em 0.2em 0.2em 0em;
 }
 
 .usage-sort > div.selected{
-    font-weight: bold;
+    color: black;
+    color: white;
+    background-color: #999;
+    /* font-weight: bold; */
 }
 
 span.twitter-typeahead .tt-dropdown-menu {
